Fix checklist scroll jump on mobile, center checkmark in checkbox
- Prevent cb-visual clicks from stealing focus to contenteditable
- Save/restore notes card scrollTop around checkbox toggle
- Delegated mousedown/touchend preventDefault on cb-visual elements
- Shrink checkmark 0.5px and nudge up for better centering in box

--- a/css/style.css
+++ b/css/style.css
@@ -367,9 +367,9 @@
     content: '';
     position: absolute;
     left: 3px;
-    top: 1px;
-    width: 4px;
-    height: 7px;
+    top: 0.5px;
+    width: 3.5px;
+    height: 6.5px;
     border: solid #fff;
     border-width: 0 1.5px 1.5px 0;
     transform: rotate(45deg);
@@ -3118,9 +3118,9 @@
     content: '';
     position: absolute;
     left: 3px;
-    top: 1px;
-    width: 4px;
-    height: 7px;
+    top: 0.5px;
+    width: 3.5px;
+    height: 6.5px;
     border: solid #fff;
     border-width: 0 1.5px 1.5px 0;
     transform: rotate(45deg);
